# 3-semester-

./: .gitignore  README.md
Laba 1/: README.md
Laba 1/source/: employee.cpp  main.cpp
Laba 2/: README.md
Laba 2/headers/: functions.h  string.h
Laba 2/sources/: function.cpp  functions.cpp  main.cpp  string.cpp
Laba 3/: README.md
Laba 3/headers/: Chelnok.h  Entrepreneur.h  Person.h  Tourist.h  functions.h
Laba 3/sources/: Chelnok.cpp  Entrepreneur.cpp  Person.cpp  Tourist.cpp  functions.cpp  main.cpp
Laba_1/: README.md
Laba_1/source/: main.cpp
Laba_2/: README.md
Laba_2/sources/: functions.cpp  main.cpp  string.cpp
Laba_3/headers/: Chelnok.h  Entrepreneur.h  Person.h  Tourist.h  functions.h
Laba_3/sources/: Person.cpp  Tourist.cpp  functions.cpp
Laba_4/headers/: Commission.h  Hourly.h  Staff.h  Worker.h  function.h
Laba_4/sources/: Commission.cpp  Hourly.cpp  Staff.cpp  Worker.cpp  function.cpp  main.cpp
Laba_5/header/: Functions.h  LinkedList.h  Node.h
Laba_5/source/: Functions.cpp  LinkedList.cpp  main.cpp
Laba_6/: README.md
Laba_6/hdr/: Chelnok.h  Date.h  Entrepreneur.h  InputException.h  InputOutOfRangeException.h  Person.h  Tourist.h  function.h  input.h
Laba_6/src/: Chelnok.cpp  Date.cpp  Entrepreneur.cpp  Person.cpp  Tourist.cpp  function.cpp  input.cpp  main.cpp
Laba_7/: CMakeLists.txt  README.md  file_reader
Laba_7/docs/: data.txt
Laba_7/hdr/: FileReader.h  function.h
Laba_7/src/: FileReader.cpp  function.cpp  main.cpp
Laba_8/: README.md  main
Laba_8/hdr/: Algorithms.h  DoublyLinkedList.h  Menu.h  Node.h  menu.h
(+6 files in other folders)
